# Learned-Compressed-Rank-Select-TALG22

./: .gitignore  .gitmodules  CMakeLists.txt  README-orig.md  README.md  gen_table.py  my_benchmark.cpp  plot_results.py  run_all.sh  run_local.sh  sux_cpp_bench.cpp
data/GOV2/100K-1M/: 1_gov.bin.docs
data/GOV2/10M-/: 1_gov.bin.docs
data/GOV2/1M-10M/: 1_gov.bin.docs
include/: benchmark_utils.hpp  wrapper_sdsl.hpp
results/: GOV2_1M-10M_comparison.csv  comparison.csv  sux_DNA_5GRAM_URL_comparison.csv  sux_GOV2_10M-_comparison.csv  sux_GOV2_1M-10M_comparison.csv  sux_GOV2_averages.csv  sux_cpp_DNA_5GRAM_URL_comparison.csv  sux_cpp_ef_comparison.csv
results-repo/: DNA_5GRAM_URL_comparison.csv  GOV2_100K-1M_comparison.csv  GOV2_10M-_comparison.csv  GOV2_averages.csv  entropy_comparison.csv  sux_GOV2_100K-1M_comparison.csv  sux_cpp_GOV2_100K-1M_comparison.csv  sux_cpp_GOV2_10M-_comparison.csv  sux_cpp_GOV2_1M-10M_comparison.csv  sux_cpp_GOV2_averages.csv  sux_ef_comparison.csv
sux-bench/: Cargo.toml
sux-bench/src/: main.rs
