[package]
name = "sux-bench"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sux-bench"
path = "src/main.rs"

[dependencies]
sux = { git = "https://github.com/vigna/sux-rs", rev = "9614130671d7542d6fac1c48734a3b88fcaf2eb6" }
mem_dbg = "0.4"
rand = { version = "0.8", features = ["small_rng"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
